--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip3 install -e .
+          pip3 install pytest
 
       - name: Format with black (PEP8)
         uses: psf/black@stable
